Wrote Jurga abf code for raster and isi hist

--- a/ACCCodetoShare/SharedMOTCode/Shared Arousal PI for MOT2 CS and Gal4 UAS.ipynb
+++ b/ACCCodetoShare/SharedMOTCode/Shared Arousal PI for MOT2 CS and Gal4 UAS.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xusy/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -426,6 +434,26 @@
     "plt.savefig(summaryFolderPath+ 'ArousalContrast' + f[8:-4] + '.png', bbox_inches='tight', dpi = 300)\n",
     "PIdfAllDay.to_csv(summaryFolderPath + 'PIdfAllDay'+ f[8:-4] + '.csv', sep=',', index=True)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4', '5', '6']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RunLabels"
    ]
   },
   {
